Including custom js file

--- a/website/index.html
+++ b/website/index.html
@@ -96,6 +96,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.min.js"></script>
+    <!-- User specific JavaScript -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
