Updated with uncss, minify, autoprefixer

--- a/website/index.html
+++ b/website/index.html
@@ -12,8 +12,10 @@
 
     <title>Jumbotron Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <!-- build:css css/style.min.css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- /build -->
+
 </head>
 
 <body>
